force-app/main/default/objects/ACR_History__c/ACR_History__c.object-meta.xml
<CustomObject>
    <label>ACR History</label>
    <nameField>
        <displayFormat>ACR-{00000000}</displayFormat>
        <label>ACR History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ACR History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>