force-app/main/default/objects/ACR_History__c/fields/AccountContactRelation__c.field-meta.xml
<CustomField>
    <fullName>AccountContactRelation__c</fullName>
    <label>AccountContactRelation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>