force-app/main/default/objects/ACR_History__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ACR History</relationshipLabel>
    <relationshipName>ACR_History</relationshipName>
    <type>Lookup</type>
</CustomField>