force-app/main/default/objects/ACR_History__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <description>Shows field name</description>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>