force-app/main/default/objects/ACR_History__c/fields/Old_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_Value__c</fullName>
    <description>Shows old value of updated field</description>
    <label>Old Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>